force-app/main/default/objects/Lead/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <description>It indicates similarity score for fuzzy match</description>
    <label>Match Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>