force-app/main/default/objects/Lead/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It stores the matched Account if found.</description>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>