force-app/main/default/objects/Lead/fields/Matched_By__c.field-meta.xml
<CustomField>
    <fullName>Matched_By__c</fullName>
    <description>It shows the source of matching logic.</description>
    <label>Matched By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domain</fullName>
            </value>
            <value>
                <fullName>Fuzzy</fullName>
            </value>
            <value>
                <fullName>Combined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>